--- a/homework/form/form.html
+++ b/homework/form/form.html
@@ -4,7 +4,10 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Form</title>
         <style>
-           
+            h1{
+               text-align: center;
+               }
+             .yo{text-align: center;}
             legend{
                 font-size: 25px;
                 }
@@ -23,7 +26,7 @@
     </head>
 <body>
     <h1>Form</h1>
-    <p>Please finish forms</p>
+    <p class="yo">Please finish form</p>
 <div class= "bor">
 <form>
     <fieldset>
