--- a/homework/final/food.html
+++ b/homework/final/food.html
@@ -82,7 +82,7 @@
 		</div>
 		<div id="analysis">
 		</div>
-		<img src="shop.jpg" alt="this is a place that we will shows up project outcome in the future">
+		<img src="SHOP.jpg" alt="this is a place that we will shows up project outcome in the future">
 		<div id="footer">
 			<table class="quality">
 				<tr>
